--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">next-media-challenge</string>
+    <string name="logo">logo</string>
+    <string name="todo">TODO</string>
+    <string name="image_article">image article</string>
+    <string name="s">مجلس النواب يحسم في جدل تقاعد البرلمانيين الأسبوع المقبل</string>
+
 </resources>
